--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/fire": "^6.0.4",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.2.0",
     "@angular/localize": "~10.2.0",
     "@angular/material": "^10.2.7",
